--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/img_splash_picture.png
+    - assets/images/img_login_picture.png
     - assets/icons/ic_user_scam.png
 
 
