--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  email_validator: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,9 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/img_splash_picture.png
-    - assets/images/img_login_picture.png
-    - assets/icons/ic_user_scam.png
+    - assets/images/
+    - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
