--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   email_validator: ^2.0.1
-
-
+  fluttertoast: ^8.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
