--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   google_fonts: ^2.1.0
   salomon_bottom_bar: ^3.1.0
 
+  #Firebase dependencies.
+  firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
+  firebase_auth: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
