--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
   firebase_auth: ^3.2.0
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.2.0
 
 dev_dependencies:
   flutter_test:
