add get detail data from firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   salomon_bottom_bar: ^3.1.0
+  cached_network_image: ^3.2.0
 
   #Firebase dependencies.
   firebase_core: ^1.10.0
