--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^3.2.0
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.0
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
