Adding const text body notification and remove unused files

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="susmatior_app">
+        android:label="SUSMATIOR">
         <activity
             android:name=".MainActivity"
             android:exported="true"
